src/test/deca/context/invalid/created/objet/extends.deca
// Description:
//    extends sur une classe inexistante
//Resultat :
//    Ligne 7 : classe non definie


class B extends A {
    int y ;
}